--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
-    kapt 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation "com.google.android.libraries.places:places:2.6.0"
     implementation 'com.github.mukeshsolanki:Google-Places-AutoComplete-EditText:0.0.8'
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
