--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBo7DO3CnEOj4zjcdSOq2Q-bEc59EHwxLs"/>
+        <activity
+            android:name=".NewThirdActivity"
+            android:exported="false" />
 
         <activity
             android:name=".ThirdActivity"
