--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ plugins {
 allprojects {
     repositories {
         maven { url "https://jitpack.io" }
+        mavenCentral()
+        google()
     }
 }
 
